force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterion__c/KimbleOne__DeliveryPortfolioCriterion__c.object-meta.xml
<CustomObject>
    <label>Z_Obs - Delivery Portfolio Criterion</label>
    <nameField>
        <label>Delivery Portfolio Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Portfolio Criteria</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>