force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterion__c/fields/KimbleOne__DeliveryGroupFieldPath__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryGroupFieldPath__c</fullName>
    <label>Delivery Group Field Path</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>