force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterion__c/fields/KimbleOne__RelatedObjectCriteriaPath__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RelatedObjectCriteriaPath__c</fullName>
    <label>Related Object Criteria Path</label>
    <type>TextArea</type>
</CustomField>