force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterion__c/fields/KimbleOne__RelatedObjectFieldPath__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RelatedObjectFieldPath__c</fullName>
    <label>Related Object Field Path</label>
    <type>TextArea</type>
</CustomField>