force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterion__c/fields/KimbleOne__RelatedObjectOtherCriteria__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RelatedObjectOtherCriteria__c</fullName>
    <label>Related Object Other Criteria</label>
    <type>TextArea</type>
</CustomField>