force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterion__c/fields/KimbleOne__RelatedObjectTypeName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RelatedObjectTypeName__c</fullName>
    <label>Related Object Type Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>