force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterion__c/fields/KimbleOne__ValueFieldName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ValueFieldName__c</fullName>
    <label>Value Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>